--- a/Hardware/esp32-lvgl.html
+++ b/Hardware/esp32-lvgl.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ESP32 Display Module</title>
+    <title>ESP32 LVGL</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -11,52 +11,10 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Hackowanie</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Strona główna</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="rejestracja.html">Rejestracja</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="logowanie.html">Logowanie</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page1.html">Esp32 LVGL</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page2.html">Podstrona 2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page3.html">Podstrona 3</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page4.html">Podstrona 4</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page5.html">Podstrona 5</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div id="navigation"></div>
 
     <div class="container">
-      <h1>ESP32 Display Module</h1>
+      <h1>ESP32 LVGL</h1>
 
       <p>
         2,4-calowy moduł ESP32 to kompaktowy wyświetlacz dotykowy LCD z
@@ -117,38 +75,42 @@
       </ul>
 
       <h2>Informacje dodatkowe:</h2>
-      <p>Koszt: około 60zł + dostawa</p>
+      <p>Koszt: około 60 zł + dostawa</p>
       <p>
         W zestawie: kabel USB C/micro, rysik, przewód do połączenia zasilania
       </p>
           <h2>Schematy:</h2>
           <div class="row">
             <div class="col-md-6 mb-4">
-              <img src="obrazy/esp32/schemat1.jpg" alt="Schemat ESP32" class="img-fluid">
+              <img src="../obrazy/esp32/schemat1.jpg" alt="Schemat ESP32" class="img-fluid">
             </div>
             <div class="col-md-6 mb-4">
-              <img src="obrazy/esp32/schemat2.jpg" alt="Schemat pinów ESP32" class="img-fluid">
+              <img src="../obrazy/esp32/schemat2.jpg" alt="Schemat pinów ESP32" class="img-fluid">
             </div>
           </div>
 
           <h2>Zdjęcia:</h2>
           <div class="row">
             <div class="col-md-4 mb-4">
-              <img src="obrazy/esp32/esp32-1.jpg" alt="ESP32 Module" class="img-fluid">
+              <img src="../obrazy/esp32/esp32-1.jpg" alt="ESP32 Module" class="img-fluid">
             </div>
             <div class="col-md-4 mb-4">
-              <img src="obrazy/esp32/esp32-2.jpg" alt="ESP32 z wyświetlaczem" class="img-fluid">
+              <img src="../obrazy/esp32/esp32-2.jpg" alt="ESP32 z wyświetlaczem" class="img-fluid">
             </div>
             <div class="col-md-4 mb-4">
-              <img src="obrazy/esp32/esp32-3.jpg" alt="ESP32 USB-C/Micro" class="img-fluid">
+              <img src="../obrazy/esp32/esp32-3.jpg" alt="ESP32 USB-C/Micro" class="img-fluid">
             </div>
             <div class="col-md-4 mb-4">
-              <img src="obrazy/esp32/esp32-4.jpg" alt="ESP32 SD" class="img-fluid">
+              <img src="../obrazy/esp32/esp32-4.jpg" alt="ESP32 SD" class="img-fluid">
             </div>
           </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="../template.js"></script>
+    <script>
+        loadNavbar(true);
+    </script>
   </body>
 </html>
