--- a/page1.html
+++ b/page1.html
@@ -16,36 +16,36 @@
         <div class="col-md-4 mb-4">
           <div class="container">
             <h2>ESP32 LVGL</h2>
-            <p>Projekt wykorzystujący moduł ESP32 z wyświetlaczem i biblioteką LVGL</p>
-            <a href="projects/esp32-lvgl.html" class="btn btn-primary">Zobacz więcej</a>
+            <p>ESP32 LVGL to mikrokontroler ESP32 z biblioteką LVGL do tworzenia wydajnych interfejsów graficznych na ekranach TFT i dotykowych.</p>
+            <a href="Hardware/esp32-lvgl.html" class="btn btn-primary">Zobacz więcej</a>
           </div>
         </div>
         <div class="col-md-4 mb-4">
           <div class="container">
             <h2>M5Stick</h2>
-            <p>Projekty oparte na M5Stick, miniaturowej i wszechstronnej platformie IoT</p>
-            <a href="projects/m5stick.html" class="btn btn-primary">Zobacz więcej</a>
+            <p>M5Stick to kompaktowy mikrokontroler z ekranem, który umożliwia tworzenie aplikacji IoT i interfejsów graficznych.</p>
+            <a href="Hardware/m5stick.html" class="btn btn-primary">Zobacz więcej</a>
           </div>
         </div>
         <div class="col-md-4 mb-4">
           <div class="container">
             <h2>Flipper Zero</h2>
-            <p>Wszechstronny gadżet do testów i hakowania</p>
-            <a href="projects/flipper-zero.html" class="btn btn-primary">Zobacz więcej</a>
+            <p>Flipper Zero to przenośne narzędzie hakerskie do testowania bezpieczeństwa, obsługujące RFID, NFC, IR i Sub-GHz.</p>
+            <a href="Hardware/flipper.html" class="btn btn-primary">Zobacz więcej</a>
           </div>
         </div>
         <div class="col-md-4 mb-4">
           <div class="container">
             <h2>Raspberry Pi</h2>
-            <p>Projekty oparte na Raspberry Pi i jego możliwościach</p>
-            <a href="projects/raspberry-pi.html" class="btn btn-primary">Zobacz więcej</a>
+            <p>Raspberry Pi to mały, tani komputer jednopłytkowy, idealny do projektów DIY</p>
+            <a href="Hardware/raspberry_pi.html" class="btn btn-primary">Zobacz więcej</a>
           </div>
         </div>
         <div class="col-md-4 mb-4">
           <div class="container">
             <h2>Arduino</h2>
-            <p>Projekty wykorzystujące platformę Arduino</p>
-            <a href="projects/arduino.html" class="btn btn-primary">Zobacz więcej</a>
+            <p>Arduino to platforma do tworzenia projektów elektronicznych, oparta na łatwym w użyciu mikrokontrolerze.</p>
+            <a href="Hardware/arduino.html" class="btn btn-primary">Zobacz więcej</a>
           </div>
         </div>
       </div>
