--- a/page2.html
+++ b/page2.html
@@ -3,22 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Podstrona 2</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
+    <title>Projekty</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="navigation"></div>
 
     <div class="container">
-      <h1>Podstrona 2</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.
-      </p>
+      <h1>Hacking Software:</h1>
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="container">
+            <h2>Bruce</h2>
+            <p>Możliwy tylko do zainstalowania na płytach z rodziny ESP32</p>
+            <a href="Software/bruce.html" class="btn btn-primary">Zobacz więcej</a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="container">
+            <h2>Maruder</h2>
+            <p>Możlwy do zainstalowania na wielu platformach</p>
+            <a href="Software/maruder.html" class="btn btn-primary">Zobacz więcej</a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="container">
+            <h2>Metasploit Framework</h2>
+            <p>Możlwy do zainstalowania na Windows/Linux/MacOS</p>
+            <a href="Software/metasploit.html" class="btn btn-primary">Zobacz więcej</a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="container">
+            <h2>HackOS</h2>
+            <p>Możlwy do zainstalowania na Androidzie</p>
+            <a href="Software/hackos.html" class="btn btn-primary">Zobacz więcej</a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="container">
+            <h2>Flipper OS</h2>
+            <p>Dedykowany system dla flippera</p>
+            <a href="Software/flipperos.html" class="btn btn-primary">Zobacz więcej</a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
