--- a/page3.html
+++ b/page3.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Podstrona 3</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
+    <title>Projekty</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="navigation"></div>
 
     <div class="container">
-      <h1>Podstrona 3</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.
-      </p>
+      <h1>Projekty gotowe/w trakcie:</h1>
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="container">
+            <h2>ESP32 BRUCE V1</h2>
+            <p>Połączenie ESP32 LVGL z systemem Bruce</p>
+            <a href="projects/esp32bruce.html" class="btn btn-primary">Zobacz więcej</a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
